<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backgraundblack">

    <LinearLayout
        android:layout_width="294dp"
        android:layout_height="324dp"
        android:orientation="vertical"

        android:background="@drawable/rounded_corner"
        tools:ignore="MissingConstraints"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:layout_width="250dp"
            android:layout_height="56dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/login"
            android:translationY="20dp"
            android:hint="@string/login"
            android:textAlignment="center"
            android:translationX="20dp"
            />

        <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/password"
            android:textAlignment="center"
            android:translationX="20dp"
            android:translationY="40dp"/>

        <Button
            android:id="@+id/loginButton"
            android:text="@string/entrance"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/blue"
            android:translationX="20dp"
            android:translationY="60dp"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/answer"
            android:hint="@string/answer_entrance"
            android:textAlignment="center"
            android:translationX="20dp"
            android:translationY="80dp"
            android:textSize="18sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>