<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserRegistration"
    android:background="@drawable/blackbackgraund">

    <LinearLayout
        android:layout_width="294dp"
        android:layout_height="324dp"
        android:orientation="vertical"

        android:background="@drawable/rounded_corner"
        tools:ignore="MissingConstraints"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/answer"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="#0000FF"
            android:textSize="36sp"
            android:translationX="20dp"
            android:translationY="20dp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="56dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/user_login"
            android:hint="@string/login"
            android:textAlignment="center"
            android:translationX="20dp"
            android:translationY="40dp"
            android:autofillHints="" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/user_password"
            android:hint="@string/password"
            android:textAlignment="center"
            android:translationX="20dp"
            android:translationY="60dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/registrationButton"
            android:text="@string/register"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/blue"
            android:translationX="20dp"
            android:translationY="80dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>